// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user resolver should change user password 1`] = `[Error: Password incorrect.]`;

exports[`user resolver should respond with a user 1`] = `
Object {
  "__v": 0,
  "_id": "5abba8e47af4d91c259e12ef",
  "createdAt": "2018-12-12T13:00:00",
  "email": "User1@gql.com",
  "lastLogin": "2018-12-12T03:14:07",
  "password": "test",
  "posts": Array [
    Object {
      "__v": 0,
      "_id": "5abba8e47af4d91c259e12ee",
      "author": "5abba8e47af4d91c259e12ef",
      "createdAt": "2018-10-10T13:00:00",
      "editedAt": "2018-10-10T13:00:00",
      "message": "Some message",
    },
  ],
  "username": "User1",
}
`;

exports[`user resolver should respond with users 1`] = `
Array [
  Object {
    "__v": 0,
    "_id": "5abba8e47af4d91c259e12ef",
    "createdAt": "2018-12-12T13:00:00",
    "email": "User1@gql.com",
    "lastLogin": "2018-12-12T03:14:07",
    "password": "test",
    "posts": Array [],
    "username": "User1",
  },
]
`;
